fix TestBlock layout issue

--- a/blocks/TestBlock/css/test_block.less
+++ b/blocks/TestBlock/css/test_block.less
@@ -12,7 +12,7 @@ ul.exercise {
     padding: 0;
     list-style-type: none;
 
-    li {
+    li.exercise-item {
         border: solid thin #ccc;
     }
 
